--- a/cabal_practice/cabal.Practice.cabal
+++ b/cabal_practice/cabal.Practice.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 -- The name of the package.
-name:                cabal.Practice
+name: cabalPractice
 
 -- The package version.  See the Haskell package versioning policy (PVP) 
 -- for standards guiding when and how versions should be incremented.
@@ -44,14 +44,28 @@ build-type:          Simple
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.8
 
+Tested-with:         GHC==7.4.1
 
 library
+  Default-language:    Haskell2010
+  GHC-options:         -Wall -O2
+  HS-source-dirs:      src/
+  Build-depends:       base
+
   -- Modules exported by the library.
   -- exposed-modules:     
   
   -- Modules included in this library but not exported.
   -- other-modules:       
-  
+
   -- Other library packages from which modules are imported.
-  build-depends:       base ==4.5.*
+  build-depends:       base
   
+
+Test-Suite unit-test
+  Default-language:    Haskell2010
+  HS-source-dirs:      test/
+  Type:                exitcode-stdio-1.0
+  Main-is:             test.hs
+  Build-depends:       base
+                     , test-framework
