--- a/cabal_practice/cabal.Practice.cabal
+++ b/cabal_practice/cabal.Practice.cabal
@@ -53,7 +53,7 @@ library
   Build-depends:       base
 
   -- Modules exported by the library.
-  -- exposed-modules:     
+  exposed-modules: Cabal.Practice.Service
   
   -- Modules included in this library but not exported.
   -- other-modules:       
@@ -69,3 +69,7 @@ Test-Suite unit-test
   Main-is:             test.hs
   Build-depends:       base
                      , test-framework
+                     , HUnit
+                     , test-framework-hunit
+                     , test-framework-th
+                     , cabalPractice
